--- a/mapbox-gl.css
+++ b/mapbox-gl.css
@@ -708,21 +708,15 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
   }
 }
 
-.yt_inner {
-  width: 100%; /*画面横幅が920px以下になると背景枠が幅いっぱいのままレスポンシブ対応*/
-  max-width: 920px; /*PCでの枠の最大幅*/
-  margin: auto; /*中央寄せ*/
-  padding: 4%; /*動画自体の余白設定*/
-  background: #e0e0e0; /*確認用なので不要なら削除*/
+div.vid_contents {
+  width: 100%; /*背景色を横幅いっぱいに広げる*/
+  text-align: center;
+  margin: auto;
+  padding: 4% 4% 4% 4%; /*ここで動画の周りの余白を調整*/
+  background: #e6e6e6; /*余白の背景色*/
 }
-.yt {
-  position: relative;
-  padding-bottom: 56.25%; /*動画のサイズ比率を1：0.5625で固定*/
-}
-.yt__iframe {
-  position: absolute;
-  top: 0;
-  right: 0;
+
+video.vid_main {
   width: 100%;
-  height: 100%;
+  max-width: 920px; /*PC版での最大幅*/
 }
